--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "BasilBot.js",
   "dependencies": {
-    "discord.js": "^9.3.0",
+    "discord.js": "11.3.0",
     "ytdl-core": "0.18.5",
     "node-opus": "^0.2.6",
     "bufferutil": "^3.0.2"
