--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   ],
   "main": "BasilBot.js",
   "dependencies": {
-    "discord.js": "11.3.0",
-    "ytdl-core": "0.18.5",
-    "node-opus": "^0.2.6",
-    "bufferutil": "^3.0.2"
+    "bufferutil": "^3.0.3",
+    "discord.js": "^11.3.0",
+    "erlpack": "github:discordapp/erlpack",
+    "ffmpeg": "0.0.4",
+    "libsodium-wrappers": "^0.5.4",
+    "node-opus": "^0.2.7",
+    "opusscript": "0.0.4",
+    "prism-media": "github:hydrabolt/prism-media",
+    "uws": "^9.14.0",
+    "ytdl-core": "^0.20.0"
   }
 }
